update url page

--- a/Scanner des Vulnerabilites/webSite_version/Template/download.html
+++ b/Scanner des Vulnerabilites/webSite_version/Template/download.html
@@ -20,7 +20,6 @@
           <li><a href="scan.html">GogoScan</a></li>
           <li><a href="result.html">Result Scan</a></li>
           <li><a href="download.html">Download</a></li>
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
         </ul>
         <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
       </nav>
@@ -28,8 +27,26 @@
 
     <section class="hero-section">
       <div class="content">
+        <h2>Start a new day with VulnFree</h2>
+        <p>
+          VulnFree is a Vulnerability SCanner that aim to help you and your team 
+          to securize your web application
+        </p>
+        <button>Learn More</button>
       </div>
     </section>
+
+    <script>
+      const header = document.querySelector("header");
+      const hamburgerBtn = document.querySelector("#hamburger-btn");
+      const closeMenuBtn = document.querySelector("#close-menu-btn");
+
+      // Toggle mobile menu on hamburger button click
+      hamburgerBtn.addEventListener("click", () => header.classList.toggle("show-mobile-menu"));
+
+      // Close mobile menu on close button click
+      closeMenuBtn.addEventListener("click", () => hamburgerBtn.click());
+    </script>
     
   </body>
 </html>
