--- a/Scanner des Vulnerabilites/webSite_version/Template/home.html
+++ b/Scanner des Vulnerabilites/webSite_version/Template/home.html
@@ -14,11 +14,13 @@
         <a class="logo" href="#">Vulnerability Scanner<span>.</span></a>
         <ul class="menu-links">
           <span id="close-menu-btn" class="material-symbols-outlined">close</span>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li><a href="about_us.html">About us</a></li>
           <li><a href="attacks.html">Attacks & Menace</a></li>
           <li><a href="scan.html">GogoScan</a></li>
           <li><a href="result.html">Result Scan</a></li>
+          <li><a href="download.html">Download</a></li>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
         </ul>
         <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
       </nav>
@@ -29,7 +31,7 @@
         <h2>Start a new day with VulnFree</h2>
         <p>
           VulnFree is a Vulnerability SCanner that aim to help you and your team 
-          to securize your web application
+          to securize your web application.
         </p>
         <button>Learn More</button>
       </div>
