--- a/Scanner des Vulnerabilites/test liaison/style.css
+++ b/Scanner des Vulnerabilites/test liaison/style.css
@@ -1,99 +1,3 @@
-/* Importing Google font - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-body, html {
-  height: 100%;
-  background-color: #000;
-  color: #fff;
-  overflow-x: hidden;
-}
-
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 20px;
-  background-color: #000;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-}
-
-header .navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.navbar .logo {
-  color: #fff;
-  font-weight: 700;
-  font-size: 1.8rem;
-  text-decoration: none;
-}
-
-.navbar .logo span {
-  color: #C06B3E;
-}
-
-.navbar .menu-links {
-  display: flex;
-  list-style: none;
-  gap: 25px;
-}
-
-.navbar a {
-  color: #fff;
-  text-decoration: none;
-  transition: 0.2s ease;
-  font-weight: 500;
-}
-
-.navbar a:hover {
-  color: #C06B3E;
-}
-
-.hero-section {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-  text-align: center;
-  margin-top: 100px; /* Adjusted to ensure content is not hidden under the fixed header */
-}
-
-.hero-section .content {
-  max-width: 800px;
-  width: 100%;
-  background-color: #333;
-  padding: 40px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  color: #fff;
-}
-
-.hero-section .content h1 {
-  font-size: 2.5rem;
-  line-height: 3rem;
-  margin-bottom: 20px;
-}
-
-.hero-section .content p {
-  font-weight: 300;
-  margin-bottom: 30px;
-  font-size: 1.2rem;
-}
-
 .scan-form {
   text-align: center;
 }
@@ -276,17 +180,24 @@ header .navbar {
   background-color: #cc0000;
 }
 
-.hidden {
-  display: none;
+.downloadButton {
+  background-color: orangered;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: white;
+  margin-right: 10px;
+  font-size: 1rem;
+  transition: background 0.2s ease;
 }
 
-footer {
-  background-color: #000;
-  color: #ffffff;
-  text-align: center;
-  padding: 10px 0;
-  position: relative;
-  width: 100%;
+.downloadButton:hover {
+  background-color: darkorange;
+}
+
+.hidden {
+  display: none;
 }
 
 @media (max-width: 768px) {
@@ -312,3 +223,6 @@ footer {
     padding: 15px;
   }
 }
+
+
+/*pour la page web*/
